ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -10,5 +10,6 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
-loadbalancing.ordering-service.sefa-ordering-service-46213_46213.weight=0.5
-loadbalancing.ordering-service.sefa-ordering-service-46471_46471.weight=0.5
+loadbalancing.ordering-service.sefa-ordering-service-46213_46213.weight=0.3333333333333333
+loadbalancing.ordering-service.sefa-ordering-service-46471_46471.weight=0.3333333333333333
+loadbalancing.ordering-service.sefa-ordering-service-45253_45253.weight=0.3333333333333333
