ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -10,5 +10,5 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
-loadbalancing.ordering-service.sefa-ordering-service_58086.weight=0.9523809523809523
-loadbalancing.ordering-service.sefa-ordering-service-34137_34137.weight=0.047619047619047616
+loadbalancing.ordering-service.sefa-ordering-service_58086.weight=0.991138
+loadbalancing.ordering-service.sefa-ordering-service-34137_34137.weight=0.008862
