--- a/application.properties
+++ b/application.properties
@@ -11,3 +11,5 @@ management.endpoint.env.post.enabled=true
 
 loadbalancing.global.type=WEIGHTED_RANDOM
 loadbalancing.ordering-service.sefa-ordering-service_58086.weight=1.0
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.5
+loadbalancing.restaurant-service.sefa-restaurant-service-39561_39561.weight=0.5
