--- a/application.properties
+++ b/application.properties
@@ -11,6 +11,7 @@ management.endpoint.env.post.enabled=true
 
 loadbalancing.global.type=WEIGHTED_RANDOM
 loadbalancing.ordering-service.sefa-ordering-service_58086.weight=1.0
-loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.3333333333333333
-loadbalancing.restaurant-service.sefa-restaurant-service-39561_39561.weight=0.3333333333333333
-loadbalancing.restaurant-service.sefa-restaurant-service-41941_41941.weight=0.3333333333333333
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-39561_39561.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-41941_41941.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-41435_41435.weight=0.25
