ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -11,7 +11,7 @@ management.endpoint.env.post.enabled=true
 
 loadbalancing.global.type=WEIGHTED_RANDOM
 loadbalancing.ordering-service.sefa-ordering-service_58086.weight=1.0
-loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service-39561_39561.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service-41941_41941.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service-41435_41435.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.0
+loadbalancing.restaurant-service.sefa-restaurant-service-39561_39561.weight=0.3282967708804606
+loadbalancing.restaurant-service.sefa-restaurant-service-41941_41941.weight=0.33074150773909483
+loadbalancing.restaurant-service.sefa-restaurant-service-41435_41435.weight=0.34096172138044456
