--- a/application.properties
+++ b/application.properties
@@ -13,3 +13,4 @@ loadbalancing.global.type=WEIGHTED_RANDOM
 loadbalancing.ordering-service.sefa-ordering-service_58086.weight=1.0
 loadbalancing.restaurant-service.sefa-restaurant-service-41941_41941.weight=1.0
 loadbalancing.restaurant-service.sefa-restaurant-service-39561_39561.weight=0.499851441062561
+loadbalancing.restaurant-service.sefa-restaurant-service-41435_41435.weight=0.0
