ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -16,3 +16,4 @@ loadbalancing.restaurant-service.sefa-restaurant-service-39561_39561.weight=0.49
 loadbalancing.restaurant-service.sefa-restaurant-service-41435_41435.weight=0.0
 loadbalancing.restaurant-service.sefa-restaurant-service-38769_38769.weight=0.0
 loadbalancing.restaurant-service.sefa-restaurant-service-41339_41339.weight=0.0
+loadbalancing.restaurant-service.sefa-restaurant-service-45059_45059.weight=0.0
