ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -19,3 +19,4 @@ loadbalancing.restaurant-service.sefa-restaurant-service-41339_41339.weight=0.0
 loadbalancing.restaurant-service.sefa-restaurant-service-45059_45059.weight=0.5
 loadbalancing.restaurant-service.sefa-restaurant-service-46389_46389.weight=0.0
 loadbalancing.restaurant-service.sefa-restaurant-service-37407_37407.weight=0.2
+loadbalancing.restaurant-service.sefa-restaurant-service-37377_37377.weight=0.2
