--- a/application.properties
+++ b/application.properties
@@ -10,3 +10,5 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.8
+loadbalancing.restaurant-service.sefa-restaurant-service-37651_37651.weight=0.2
