--- a/application.properties
+++ b/application.properties
@@ -14,3 +14,4 @@ loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.8
 loadbalancing.restaurant-service.sefa-restaurant-service-37651_37651.weight=0.2
 loadbalancing.ordering-service.sefa-ordering-service_58086.weight=0.5
 loadbalancing.ordering-service.sefa-ordering-service-36913_36913.weight=0.5
+loadbalancing.restaurant-service.sefa-restaurant-service-42783_42783.weight=0.2
