--- a/application.properties
+++ b/application.properties
@@ -17,3 +17,4 @@ loadbalancing.ordering-service.sefa-ordering-service-36913_36913.weight=0.5
 loadbalancing.restaurant-service.sefa-restaurant-service-42783_42783.weight=1.0
 loadbalancing.restaurant-service.sefa-restaurant-service-38567_38567.weight=0.2
 loadbalancing.restaurant-service.sefa-restaurant-service-37227_37227.weight=0.2
+loadbalancing.restaurant-service.sefa-restaurant-service-41833_41833.weight=0.2
