ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -10,4 +10,5 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
-loadbalancing.restaurant-service.sefa-restaurant-service-46493_46493.weight=1.0
+loadbalancing.restaurant-service.sefa-restaurant-service-46493_46493.weight=0.6666666666666666
+loadbalancing.restaurant-service.sefa-restaurant-service-35681_35681.weight=0.3333333333333333
